fix: resolve issue where the header was getting out of place in mobile view when the sidebar is open

--- a/src/styles/create-post/styles.module.css
+++ b/src/styles/create-post/styles.module.css
@@ -1,13 +1,14 @@
 .container {
-  margin: auto;
-  margin-top: 120px;
-  max-width: 50%;
-  padding: 10px;
-  border-radius: 10px;
+    margin: auto;
+    margin-top: 120px;
+    max-width: 50%;
+    padding: 10px;
+    border-radius: 10px;
 }
 
 @media screen and (max-width: 768px) {
-  .container {
-    max-width: 95%;
-  }
+    .container {
+        max-width: 95%;
+        margin-top: 80px;
+    }
 }
