--- a/src/styles/header/header.module.css
+++ b/src/styles/header/header.module.css
@@ -42,6 +42,9 @@
     .header {
         width: 100%;
         top: 0;
+        left: 0;
+        transform: none;
+        position: fixed;
         border-radius: 0;
         border-bottom-left-radius: 15px;
         border-bottom-right-radius: 15px;
